apps/minio/ingress-api.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-api
  namespace: minio
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`s3.k3s.crussell.io`)
      kind: Rule
      services:
        - name: minio-external
          port: 9000
  tls:
    certResolver: letsencrypt
